# bifrost-clients

./: Cargo.toml
oracle/: Cargo.toml
oracle/examples/: bifrost-config.json
oracle/src/: main.rs
runtime/: Cargo.toml  metadata-parachain-bifrost.scale
runtime/src/: assets.rs  cli.rs  conn.rs  error.rs  lib.rs  rpc.rs  tests.rs  types.rs
runtime/src/integration/: bitcoin_simulator.rs  mod.rs
